<resources>
    <string name="app_name">就是帅</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nologin">请点击登录</string>
    <string name="title_activity_login">登录</string>
    <string name="person_info">个人信息 ></string>
    <string name="login_tip">亲，您还未登录</string>
    <string name="go_to_login">去登录</string>
    <string name="vertify_code_error">验证码错误</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_vertify">请输入验证码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">请输入手机号或用户名</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="register">注册</string>
    <string name="other_login">其他登录方式</string>
    <string name="main">首页</string>
    <string name="make">定制</string>
    <string name="shoppingCart">购物车</string>
    <string name="me">我的</string>
    <string name="my_message">我的消息</string>
    <string name="share">分享</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="login">登录</string>
    <string name="log_out">退出当前账户</string>
    <string name="title_activity_register">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="all">全部</string>
    <string name="wait_obligation">待付款</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_post">待发货</string>
    <string name="wait_evaluate">待评价</string>
    <string name="my_answer">我的回答</string>
    <string name="my_ask">我的提问</string>
    <string name="my_attention">我的关注</string>
    <string name="my_file">我的文件</string>
    <string name="my_collection">我的收藏</string>
    <string name="other">其他</string>
    <string name="identity_authentication">身份认证</string>
    <string name="accounting_revenue">收支核算</string>
    <string name="complaint_advice">投诉建议</string>
    <string name="call_center">客服中心</string>
    <string name="plan_check">方案查询</string>
    <string name="make_fertilizer">肥料定制</string>
    <string name="fast_make">快速定制</string>
    <string name="plan_make">方案定制</string>
    <string name="plan_search">方案查询</string>
    <string name="toast_network_error">网络异常，请检查您的网络设置！</string>
    <string name="zjzs">专家诊室</string>
    <string name="tjgl">田间管理</string>
    <string name="nydz">农业定制</string>
    <string name="cl">测量</string>
    <string name="schq">市场行情</string>
    <string name="jdsc">京东商城</string>
    <string name="cpk">产品库</string>
    <string name="more">更多</string>
    <string name="ncw">农财网</string>
    <string name="recommend_tip">请输入推荐方案的关键字</string>
    <string name="variety_tip">请输入品种的关键字</string>
    <string name="recommend_plan">推荐方案</string>
    <string name="scan">扫一扫</string>
    <string name="web_search_tip">请输入网址</string>
    <string name="go_to">前往</string>
    <string name="refresh_and_retry">刷新重试</string>
    <string name="no_data">杯具啦！没有任何数据</string>
    <string name="signature">伦家也是有底线的</string>
    <string name="search">搜索</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="scan_fail">扫描失败!</string>
    <string name="scan_error">臣妾能力有限，二维码解析不到</string>
    <string name="login_fail_and_retry">登录失败，请重试</string>
    <string name="storage_permission_fail">无法访问存储，将无法读取和保存文件</string>
    <string name="camera_permission_fail">无法获取相机使用权限</string>
    <string name="need_storage_permission">设置-应用-就是帅-权限中开启存储权限,才能读取和保存文件</string>
    <string name="need_camera_permission_to_scan">在设置-应用-就是帅-权限中开启相机权限，才能扫一扫</string>
    <string name="need_contacts_permission">设置-应用-就是帅-权限中开启获取联系人权限</string>
    <string name="payment_declare">实付款：¥</string>
    <string name="immediately_pay">立即付款</string>
    <string name="cancel_pay">撤单</string>
    <string name="complete_transaction">交易完成</string>
    <string name="sales_return">退货</string>
    <string name="go_to_evaluate">去评价</string>
    <string name="sales_returning">退货中</string>
    <string name="cancel_paying">撤单中</string>
    <string name="remind_delivery">提醒发货</string>
    <string name="confrim_receive">确认收货</string>
    <string name="close_transaction">交易结束</string>
    <string name="handsome_value">帅气值</string>
    <string name="balance">余额</string>
    <string name="collect_store">收藏店铺</string>
    <string name="collect_goods">收藏商品</string>
    <string name="already_attention">已关注</string>
    <string name="attention">关注</string>
    <string name="service_time">从业时间：</string>
    <string name="year">年</string>
    <string name="speciality_crop_">专长作物：</string>
    <string name="speciality_skill_">技术专长：</string>
    <string name="star_level">星级：</string>
    <string name="setting">设置</string>
    <string name="font_size">字体大小</string>
    <string name="account_setting">账户设置</string>
    <string name="address_book">通讯录</string>
    <string name="self_info">个人信息</string>
    <string name="account_security">账户与安全</string>
    <string name="my_address">我的收获地址</string>
    <string name="logout_tip">确认退出登录?</string>
    <string name="save">保存</string>
    <string name="base_info">基本信息</string>
    <string name="account">账号</string>
    <string name="user_name">用户名</string>
    <string name="current_role">当前角色</string>
    <string name="change_role">切换角色</string>
    <string name="account_create_time">账户创建时间</string>
    <string name="farmer">种植户</string>
    <string name="name">姓名</string>
    <string name="location">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="service_station">服务站</string>
    <string name="service_station_name">服务站站名</string>
    <string name="legal_representative">法人代表</string>
    <string name="expertise">专家</string>
    <string name="expertise_icon">专家头像</string>
    <string name="expertise_name">专家姓名</string>
    <string name="speciality_crop">专长作物</string>
    <string name="speciality_skill">技术专长</string>
    <string name="expertise_level">专家级别</string>
    <string name="working_time">从业时间(年)</string>
    <string name="consultation_way">咨询方式</string>
    <string name="online_setting">在线设置</string>
    <string name="edit">编辑</string>
    <string name="choose_city">选择城市</string>
    <string name="choose_time">选择时间</string>
    <string name="contacts">联系人</string>
    <string name="male">先生</string>
    <string name="female">女士</string>
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="add_address">添加收货地址</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="confirm_address">确认收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="delete">删除</string>
    <string name="version">版本</string>
    <string name="binding_phone">绑定电话</string>
    <string name="update_password">修改密码</string>
    <string name="product_lib">产品库</string>
    <string name="product_lib_search_hint">请输入产品库名称</string>
    <string name="series">系列</string>
    <string name="craft">工艺</string>
    <string name="type">类型</string>
    <string name="purchase_product">购买产品</string>
    <string name="product_detail">产品详情</string>
    <string name="product_case">产品使用案例</string>
    <string name="retailers_info">零售商信息</string>
    <string name="to_here">去这里</string>
    <string name="hot_question_hint">请输入热门问题关键字</string>
    <string name="expertise_room">专家室</string>
    <string name="emergency_room">急诊室</string>
    <string name="hot_question">热门问题</string>
    <string name="unsolve_question">未解决问题</string>
    <string name="growing_crop">正在种植的作物</string>
    <string name="field_follow">服务田跟踪</string>
    <string name="field_transfer">服务田转移</string>
    <string name="field_plan">服务田规划</string>
    <string name="my_crop">我的作物</string>
    <string name="my_field">我的地块</string>
    <string name="add">添加</string>
    <string name="photo_detail">查看图片</string>
    <string name="friends_list">好友列表</string>
    <string name="zero_time">00:00/00:00</string>
    <string name="mtv">MTV</string>
    <string name="run">运动</string>
    <string name="downloading">正在下载</string>
    <string name="file_exit_if_download">该文件已存在，是否重新下载？</string>
    <string name="go_to_download">去下载</string>
    <string name="maket_info">市场行情</string>
    <string name="nationwide">全国</string>
    <string name="variety">品种</string>
    <string name="gather">采集点</string>
    <string name="price">价格</string>
    <string name="time">时间</string>
    <string name="finish">完成</string>
    <string name="step_num">步数</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="album">相册</string>

    <string name="problem_type">问题类型：</string>
    <string name="problem_type_hint">请选择问题类型</string>
    <string name="problem_content">问题详情：</string>
    <string name="problem_hint">请输入您的问题</string>

    <string name="sharewechat_success">分享成功!!!</string>
    <string name="sharewechat_cancel">分享取消!!!</string>
    <string name="sharewechat_deny">分享被拒绝!!!</string>
    <string name="sharewechat_back">分享返回!!!</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--qrcode-->
    <string name="str_scan_title">扫一扫</string>
    <string name="str_open_light">开启闪光灯</string>
    <string name="str_close_light">关闭闪光灯</string>
    <string name="str_scan_hint">取景框对准二维码, 即可自动扫描</string>
    <string name="str_editphoto_wrapper_title">图片title</string>
</resources>
