<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_dialog_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/size_16"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tx_15" />

        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/size_16"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tx_15" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_time"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tx_15" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"></DatePicker>
    </FrameLayout>

</LinearLayout>
