<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.fei.firstproject.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:requiresFadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/colorText"
                    style="@style/Font15Style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/colorText"
                    style="@style/Font15Style" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/size_120"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_vertify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_vertify"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        style="@style/Font15Style"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.fei.firstproject.widget.VerifyCodeView
                    android:id="@+id/tv_code"
                    android:layout_width="@dimen/size_120"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginStart="@dimen/size_16"
                    android:background="@color/colorWhite" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:layout_marginTop="@dimen/size_16"
                android:background="@drawable/selector_login_corner_btn_bg"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorWhite"
                style="@style/Font15Style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/register"
                    style="@style/Font15Style" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/size_10"
                        android:text="@string/other_login" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_1"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/llweixin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/size_16">

                        <ImageView
                            android:layout_width="@dimen/size_40"
                            android:layout_height="@dimen/size_40"
                            android:src="@drawable/ic_weixin"
                            android:contentDescription="@string/app_name"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_5"
                            android:text="@string/weixin"
                            style="@style/Font15Style" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_qq"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/size_16">

                        <ImageView
                            android:layout_width="@dimen/size_40"
                            android:layout_height="@dimen/size_40"
                            android:src="@drawable/ic_qq"
                            android:contentDescription="@null"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_5"
                            android:text="@string/qq"
                            style="@style/Font15Style"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
