<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <com.fei.firstproject.widget.AppHeadView
                android:id="@+id/appHeadView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftDrawable="@drawable/selector_head_left_arrow"
                app:leftPadding="@dimen/size_10"
                app:leftStyle="image"
                app:leftVisible="visible"
                app:middleStyle="text"
                app:middleText="@string/about_us"
                app:rightVisible="invisible"></com.fei.firstproject.widget.AppHeadView>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            style="@style/Font15Style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/colorText"
                style="@style/Font15Style" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0.0"
                android:textColor="@color/colorText"
                style="@style/Font15Style" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16"
            android:background="@drawable/selector_corner_btn_bg"
            android:gravity="center"
            android:text="@string/version_update"
            android:textColor="@color/colorWhite"
            style="@style/Font15Style" />


    </LinearLayout>

</LinearLayout>
